syntax = "proto3";
package example.proto;

option java_package = "com.example.protobuf";
option java_outer_classname = "CourseProto";

message Courses {
    repeated Course courses = 1;
}
 
message Course {
    int32 id = 1;
    string course_name = 2;
    repeated Student student = 3;
}
message Student {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    repeated PhoneNumber phone = 5;
    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }
    enum PhoneType {
        MOBILE = 0;
        LANDLINE = 1;
    }
}